0.2.0
Added support for multiple docks.
Changed some prefs names.
Adjusted desktop switcher and clock labels.
Allow DnDing multiple files.
Removed legacy code.
Tasks appear indock sorted by name.
Launchers appear indock sorted by name.
Fixed DnD.
Code clean.

0.1.0
Added refresh rate/use microseconds to prefs
Set desktop number in desk switcher when desktop changes via 3rd party.
Prevent tasks changing postion on bar.
Gui fixes.
Compacted code.
Various gui fixes.
Added taskbar gadget.
Added right click to launchers for simple context menu.
Clicking launcher will try to raise already opened window.
Started task bar.
Desktop switcher updates.
Pop up desktop list on rollover of swticher.
Added workspace switcher.
Removed legacy code.
Code clean.
Fixed volume slider icons.
Fixed clock.
Prefs file is ~/.config/LFS/lfsdock.rc
Tweaked prefs name.
Removed unused defines.
Fixed setting absolute position.
Fixed clock.
Set font details.
Dock can only be north or south gravity.
Dock size now set to 32, 48, 64 or 128. 
Removed unused code.
Script updates.
First commit of lfsdock.