@@ -23,7 +23,9 @@
 
 enum {BUTTONLAUNCH=0,BUTTONREMOVE,BUTTONTBD1,BUTTONTBD2,NOMOREBUTONS};
 
-extern LFSTK_windowClass	*contextWindow;
+extern LFSTK_windowClass	*launcherContextWindow;
+extern LFSTK_windowClass	*taskContextWindow;
+
 void sendClientMessage(Window win,const char *msg,unsigned long data0,unsigned long data1,unsigned long data2,unsigned long data3,unsigned long data4);
 
 bool contextCB(void *p,void* ud);
